[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "protocol-project"
version = "0.1.0"
description = "Super Reliable tcp-like protocol build on top of udp"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = []
requires-python = ">=3.8"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
pythonpath = ["."]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]